--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ pandas==2.2.2
 numpy==1.26.4  
 openpyxl==3.1.2
 setuptools==69.0.3  
-wheel==0.42.0      
+wheel==0.42.0   
+numpy==1.24.3
+XlsxWriter==3.1.2
