--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 streamlit==1.28.1
-pandas==2.2.2 
-numpy==1.26.4  
-openpyxl==3.1.2
-setuptools==69.0.3  
-wheel==0.42.0   
+pandas==2.0.3
 numpy==1.24.3
+openpyxl==3.1.2
 XlsxWriter==3.1.2
+rich==13.9.4
